--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Gloria+Hallelujah|Indie+Flower|Nunito|Source+Serif+Pro" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- importamos unos estilos -->
   <!-- TODO: link base.css -->
+
+
+
   <script src="https://unpkg.com/react@15/dist/react.js"></script>
   <script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
@@ -26,6 +30,7 @@
 
   </div>
   <!--REACT-->
+  
 
 
 
@@ -33,27 +38,36 @@
   <script type="text/babel">
 
 
-  
-//cambiar  fondo  aleatoriamente.
 
-$( function RamdomBox(){
+/*COMPONENET*/
+
+function randomFont() {
+    let fonts = ['font-1', 'font-2', 'font-3', 'font-4', 'font-5'];
+    let fontRandom = fonts[Math.floor(Math.random() * fonts.length-1)];
+    return fontRandom
+  }
+  function randomBox() {
     let color = '#';
-    let arrColor = [ 'FF0000','FFFF00', '808000', '800000' ,'FF7F50','228B22'];
-    let colorActual = '#A6F2E8';
-    
-    color += colorCodes[Math.floor(Math.random() * colorCodes.length-1)];
+    let colorCod = ['00FFFF','000000','5F9EA0','DDA0DD','8FBC8F','228B22','DB7093','ADFF2F','FF00FF','708090'];
+    color += colorCod[Math.floor(Math.random() * colorCod.length)];
     
     return color
   }
-    const boxColor= {backgroundColor: RamdomBox()
+    const boxCss = {backgroundColor: randomBox()};
+    const Font = randomFont();
 
 
-/*COMPONENET*/
+
 const Box = props=>{
  
  return (
 
-  <div  style={boxColor} id="Textbox" className="center-align Textbox">{props.texto}</div>
+  <div  style={boxCss} className="box">
+  
+  <p className="center-align" style={Font}>{props.texto}</p>
+  <img  className="flor"src={props.url} /> 
+  
+  </div>
   
 
 )
@@ -62,7 +76,8 @@ const Box = props=>{
 
 ReactDOM.render(
    
- <Box texto =" Caja Ramdom" />,document.getElementById('root')
+ <Box texto =" React"  url="assets/image/flor.png"/>
+ ,document.getElementById('root')
 );
 
 
