--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 /*COMPONENET*/
 
 function randomFont() {
-    let fonts = ['font-1', 'font-2', 'font-3', 'font-4', 'font-5'];
-    let fontRandom = fonts[Math.floor(Math.random() * fonts.length-1)];
+    let fonts = ['font-1', 'font-2', 'font-3', 'font-4'];
+    let fontRandom = fonts[Math.floor(Math.random() * fonts.length)];
     return fontRandom
   }
   function randomBox() {
